[build-system]
requires = [
    "setuptools>=82.0.0,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "remove-json-keys"
version = "1.9.2"
description = "Simply remove JSON keys via CLI command."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
dependencies = [
    "colorama>=0.4.6,<1 ; platform_system == 'Windows'",
    "find-project-root>=1.0.3,<2",
    "is-unicode-supported>=1.1.2,<2",
    "json5>=0.13.0,<1",
    "non-latin-locales>=1.0.1,<2",
]
requires-python = ">=3.8,<4"
keywords = [
    "cli",
    "console",
    "data",
    "detect",
    "detection",
    "dev-tool",
    "json",
    "shell",
    "terminal",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/remove-json-keys-1.9.2"
Documentation = "https://github.com/adamlui/python-utils/tree/main/remove-json-keys/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/remove-json-keys/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pepy.tech/projects/remove-json-keys"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.scripts]
remove-json-keys = "remove_json_keys.cli.__main__:main"
remove-json-key = "remove_json_keys.cli.__main__:main"
remove-json = "remove_json_keys.cli.__main__:main"
removejsonkeys = "remove_json_keys.cli.__main__:main"
removejsonkey = "remove_json_keys.cli.__main__:main"
removejson = "remove_json_keys.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "nox>=2026.2.9",
    "tomli>=2.4.0,<3",
    "tomli-w>=1.2.0,<2",
    "translate-messages>=1.9.0,<2",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
remove_json_keys = [
    "data/*.json",
    "data/_locales/en/messages.json",
]
