[build-system]
requires = [
    "setuptools>=82.0.1,<83",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "remove-json-keys"
version = "1.10.1"
description = "Simply remove JSON keys via CLI command."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
dependencies = [
    "colorama>=0.4.6,<1 ; platform_system == 'Windows'",
    "find-project-root>=2.2.0,<3",
    "is-unicode-supported>=1.2.1,<2",
    "json5>=0.14.0,<1",
    "non-latin-locales>=1.0.5,<2",
    "sys-lang>=1.0.1,<2",
]
requires-python = ">=3.8,<4"
keywords = [
    "cli",
    "console",
    "data",
    "detect",
    "detection",
    "dev-tool",
    "json",
    "shell",
    "terminal",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/remove-json-keys-1.10.1"
Documentation = "https://github.com/adamlui/python-utils/tree/main/remove-json-keys/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/remove-json-keys/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.scripts]
remove-json-keys = "remove_json_keys.cli.__main__:main"
remove-json-key = "remove_json_keys.cli.__main__:main"
remove-json = "remove_json_keys.cli.__main__:main"
removejsonkeys = "remove_json_keys.cli.__main__:main"
removejsonkey = "remove_json_keys.cli.__main__:main"
removejson = "remove_json_keys.cli.__main__:main"

[project.optional-dependencies]
dev = [
    "find-project-root>=2.2.0,<3",
    "nox>=2026.4.10",
    "pre-commit>=4.5.1,<5",
    "tomli>=2.4.1,<3",
    "tomli-w>=1.2.0,<2",
    "translate-messages>=1.10.1,<2",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
remove_json_keys = [
    "data/*.json",
    "data/_locales/en/messages.json",
]
