[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "translate-messages"
version = "1.3.0"
description = "Translate en/messages.json (in chrome.i18n format) to 100+ locales automatically."
authors = [
    { name = "Adam Lui", email = "adam@kudoai.com" },
]
readme = "docs/README.md"
license = "MIT"
license-files = [
    "docs/LICENSE.md",
]
dependencies = [
    "colorama>=0.4.6,<1.0.0 ; platform_system == 'Windows'",
    "json5>=0.9.0,<1.0.0",
    "tomli>=2.0.0,<3.0.0",
    "tomli-w>=0.1.0,<2.0.0",
    "translate>=3.8.0,<4.0.0",
]
requires-python = ">=3.6,<4.0"
keywords = [
    "chrome",
    "cli",
    "console",
    "data",
    "dev tool",
    "i18n",
    "internationalization",
    "json",
    "localization",
    "messages",
    "mymemory",
    "translate",
    "translation",
    "translator",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Utilities",
]

[project.urls]
Changelog = "https://github.com/adamlui/python-utils/releases/tag/translate-messages-1.3.0"
Documentation = "https://github.com/adamlui/python-utils/tree/main/translate-messages/docs"
Funding = "https://github.com/sponsors/adamlui"
Homepage = "https://github.com/adamlui/python-utils/tree/main/translate-messages/#readme"
Issues = "https://github.com/adamlui/python-utils/issues"
"PyPI Stats" = "https://pypistats.org/packages/translate-messages"
Releases = "https://github.com/adamlui/python-utils/releases"
Repository = "https://github.com/adamlui/python-utils"

[project.scripts]
translate-msgs = "translate_messages.__main__:main"
translate-messages = "translate_messages.__main__:main"

[project.optional-dependencies]
dev = [
    "nox>=2026.2.9",
]
