[project]
name = "translate.py"
version = "1.0.0"
description = "Translate en/messages.json to other locales. Type translate-py --help to view options."
authors = [{name = "Adam Lui", email = "adam@kudoai.com"}]
dependencies = ["requests>=2.32.0,<3.0.0", "translate>=3.8.0,<4.0.0"]

[project.scripts]
translate-py = "translate.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md"]
